--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Koriyamadojo</h1>
+      <h1 class="project-name">東北TECH道場 郡山道場</h1>
       <h2 class="project-tagline">東北TECH道場 郡山道場</h2>
       <a href="https://github.com/yoshinagatakayuki/koriyamadojo" class="btn">View on GitHub</a>
       <a href="https://github.com/yoshinagatakayuki/koriyamadojo/zipball/master" class="btn">Download .zip</a>
